// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PrComment Component should display Customer interaction 1`] = `
<div
  className=""
>
  <div
    className="PrComment-containerListItem-3"
  >
    <WithStyles(ListItem)
      button={true}
      className="PrComment-nestedListItem-4"
      onClick={[Function]}
    >
      <WithStyles(ListItemText)
        id="CUSTOMER_INTERACTION_CommentDescription"
        secondary="Kundeninteraktion und -veränderung"
      />
      <WithStyles(Icon)
        className="PrComment-iconNoComment-6"
        id="CUSTOMER_INTERACTION_CommentIconId"
      >
        comment
      </WithStyles(Icon)>
    </WithStyles(ListItem)>
    <WithStyles(ListItem)
      className="PrComment-nestedNumber-7"
    >
      <WithStyles(Typography)
        className="PrComment-rating-11"
        id="CUSTOMER_INTERACTION"
        variant="body2"
      />
    </WithStyles(ListItem)>
  </div>
  <WithStyles(Collapse)
    in={false}
    timeout="auto"
    unmountOnExit={true}
  >
    <WithStyles(List)
      className="PrComment-nestedText-1"
      component="div"
      disablePadding={true}
    >
      <WithStyles(ListItem)>
        <WithStyles(Typography)
          className="PrComment-comment-9"
          id="CUSTOMER_INTERACTION_TYPO"
          variant="body1"
        >
          Noch nicht freigegeben.
        </WithStyles(Typography)>
      </WithStyles(ListItem)>
      <WithStyles(PrSwipePositionDescription)
        category="CUSTOMER_INTERACTION"
      />
    </WithStyles(List)>
  </WithStyles(Collapse)>
</div>
`;

exports[`PrComment Component should display ProblemAnalysis 1`] = `
<div
  className=""
>
  <div
    className="PrComment-containerListItem-3"
  >
    <WithStyles(ListItem)
      button={true}
      className="PrComment-nestedListItem-4"
      onClick={[Function]}
    >
      <WithStyles(ListItemText)
        id="PROBLEM_ANALYSIS_CommentDescription"
        secondary="Problemanalyse und -lösung"
      />
      <WithStyles(Icon)
        className="PrComment-iconNoComment-6"
        id="PROBLEM_ANALYSIS_CommentIconId"
      >
        comment
      </WithStyles(Icon)>
    </WithStyles(ListItem)>
    <WithStyles(ListItem)
      className="PrComment-nestedNumber-7"
    >
      <WithStyles(Typography)
        className="PrComment-rating-11"
        id="PROBLEM_ANALYSIS"
        variant="body2"
      />
    </WithStyles(ListItem)>
  </div>
  <WithStyles(Collapse)
    in={false}
    timeout="auto"
    unmountOnExit={true}
  >
    <WithStyles(List)
      className="PrComment-nestedText-1"
      component="div"
      disablePadding={true}
    >
      <WithStyles(ListItem)>
        <WithStyles(Typography)
          className="PrComment-comment-9"
          id="PROBLEM_ANALYSIS_TYPO"
          variant="body1"
        >
          Noch nicht freigegeben.
        </WithStyles(Typography)>
      </WithStyles(ListItem)>
      <WithStyles(PrSwipePositionDescription)
        category="PROBLEM_ANALYSIS"
      />
    </WithStyles(List)>
  </WithStyles(Collapse)>
</div>
`;

exports[`PrComment Component should display Teamwork 1`] = `
<div
  className=""
>
  <div
    className="PrComment-containerListItem-3"
  >
    <WithStyles(ListItem)
      button={true}
      className="PrComment-nestedListItem-4"
      onClick={[Function]}
    >
      <WithStyles(ListItemText)
        id="TEAMWORK_CommentDescription"
        secondary="Effektives Arbeiten im Team und Teamführung"
      />
      <WithStyles(Icon)
        className="PrComment-iconNoComment-6"
        id="TEAMWORK_CommentIconId"
      >
        comment
      </WithStyles(Icon)>
    </WithStyles(ListItem)>
    <WithStyles(ListItem)
      className="PrComment-nestedNumber-7"
    >
      <WithStyles(Typography)
        className="PrComment-rating-11"
        id="TEAMWORK"
        variant="body2"
      />
    </WithStyles(ListItem)>
  </div>
  <WithStyles(Collapse)
    in={false}
    timeout="auto"
    unmountOnExit={true}
  >
    <WithStyles(List)
      className="PrComment-nestedText-1"
      component="div"
      disablePadding={true}
    >
      <WithStyles(ListItem)>
        <WithStyles(Typography)
          className="PrComment-comment-9"
          id="TEAMWORK_TYPO"
          variant="body1"
        >
          Noch nicht freigegeben.
        </WithStyles(Typography)>
      </WithStyles(ListItem)>
      <WithStyles(PrSwipePositionDescription)
        category="TEAMWORK"
      />
    </WithStyles(List)>
  </WithStyles(Collapse)>
</div>
`;

exports[`PrComment Component should display the ContributionToCompanyDevelopment 1`] = `
<div
  className=""
>
  <div
    className="PrComment-containerListItem-3"
  >
    <WithStyles(ListItem)
      button={true}
      className="PrComment-nestedListItem-4"
      onClick={[Function]}
    >
      <WithStyles(ListItemText)
        id="CONTRIBUTION_TO_COMPANY_DEVELOPMENT_CommentDescription"
        secondary="Beitrag zur Unternehmensentwicklung"
      />
      <WithStyles(Icon)
        className="PrComment-iconNoComment-6"
        id="CONTRIBUTION_TO_COMPANY_DEVELOPMENT_CommentIconId"
      >
        comment
      </WithStyles(Icon)>
    </WithStyles(ListItem)>
    <WithStyles(ListItem)
      className="PrComment-nestedNumber-7"
    >
      <WithStyles(Typography)
        className="PrComment-rating-11"
        id="CONTRIBUTION_TO_COMPANY_DEVELOPMENT"
        variant="body2"
      />
    </WithStyles(ListItem)>
  </div>
  <WithStyles(Collapse)
    in={false}
    timeout="auto"
    unmountOnExit={true}
  >
    <WithStyles(List)
      className="PrComment-nestedText-1"
      component="div"
      disablePadding={true}
    >
      <WithStyles(ListItem)>
        <WithStyles(Typography)
          className="PrComment-comment-9"
          id="CONTRIBUTION_TO_COMPANY_DEVELOPMENT_TYPO"
          variant="body1"
        >
          Noch nicht freigegeben.
        </WithStyles(Typography)>
      </WithStyles(ListItem)>
      <WithStyles(PrSwipePositionDescription)
        category="CONTRIBUTION_TO_COMPANY_DEVELOPMENT"
      />
    </WithStyles(List)>
  </WithStyles(Collapse)>
</div>
`;
